--- a/accordion.css
+++ b/accordion.css
@@ -4,6 +4,9 @@
 
 ul {
 	list-style-type : none;
+	margin: 0;
+	padding: 0 0 0 40px;
+	margin: 0;
 }
 
 span {
@@ -17,11 +20,14 @@ span {
 li{
 	list-style-position:inside;
     background-color: black;
-	border-radius: 5px;
+	border-radius: 3px;
 	transition: 0.2s;
 	font-size: 32px;
 	border-style: solid;
-    border-width: 5px;
+    border-width: 1px;
+	margin: 0;
+	margin-top: 0.5em;
+
 }
 
 li:hover {
